# AI_Agents_With_CrewAI

./: .gitignore  README.md
ai_development/: .gitignore  README.md  pyproject.toml  report.md
latest_ai_news/: README.md  pyproject.toml
latest_ai_news/news/: 2025-03-27_00-55-32_news_article.md  2025-03-27_01-08-25_news_article.md  AI_Agents_2025-03-28_03-13-52_news_article.md  Apple_2025-03-28_01-57-29_news_article.md  Latest Movies_2025-03-29_02-05-33_news_article.md  NBA_2025-03-27_03-44-05_news_compilation.md  Ollama Models for AI Agents_2025-03-27_01-35-56_news_article.md  (+3 more)
meeting_assistant/: .gitignore  README.md  pyproject.toml
meeting_assistant/meeting_assistant/: action_items.txt  sentiment.txt  summary.txt
meeting_assistant/meeting_minutes/: action_items.md  action_items.txt  sentiment.md  sentiment.txt  summary.md  summary.txt
meeting_assistant/src/meeting_assistant/: main.py
meeting_assistant/src/meeting_assistant/crews/gmailcrew/: gmailcrew.py
meeting_assistant/src/meeting_assistant/crews/gmailcrew/config/: agents.yaml  tasks.yaml
meeting_assistant/src/meeting_assistant/crews/gmailcrew/tools/: gmail_tool.py  gmail_utility.py
meeting_assistant/src/meeting_assistant/crews/meeting_assistant/: meeting_assistant.py
meeting_assistant/src/meeting_assistant/crews/meeting_assistant/config/: agents.yaml  tasks.yaml
pdf_file_rag/: .gitignore  README.md  pyproject.toml  report.md
pdf_file_rag/db/: chroma.sqlite3
pdf_file_rag/src/pdf_file_rag/: crew.py  main.py
pdf_file_rag/src/pdf_file_rag/config/: agents.yaml  tasks.yaml
(+7 files in other folders)
