[project]
name = "pdf_file_rag"
version = "0.1.0"
description = "pdf_file_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
pdf_file_rag = "pdf_file_rag.main:run"
run_crew = "pdf_file_rag.main:run"
train = "pdf_file_rag.main:train"
replay = "pdf_file_rag.main:replay"
test = "pdf_file_rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
